[package]
name = "flv-consume-example"
version = "0.1.0"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
license = "Apache-2.0"
repository = "https://github.com/infinyon/node-demo-apps"
description = "Rust API examples"
readme = "REAMD.md"



[dependencies]
log = "0.4.8"
futures = { version = "0.3.4", features = ['async-await'] }
flv-future-aio = { version = "1.0.0" }
kf-protocol = { version = "1.0.0 "}
flv-client = { version = "1.0.0"}


