[package]
name = "add-topic"
version = "0.2.0"
edition = "2018"
authors = ["Fluvio Contributors <team@fluvio.io>"]
license = "Apache-2.0"
repository = "https://github.com/infinyon/node-demo-apps"
description = "Fluvio Add Topic API example"

[dependencies]
flv-future-aio = "2.2.1"
flv-client = "3.1.0"
kf-protocol = "1.1.3"
futures = { version = "0.3.4", features = ['async-await'] }